# eltau

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  TODO.md  annotated.html  annotated_dup.js  classeltau_1_1DrawingWindow-members.html  classeltau_1_1DrawingWindow.html  classeltau_1_1DrawingWindow.js  classeltau_1_1DrawingWindow__coll__graph.map  classeltau_1_1DrawingWindow__coll__graph.md5  classeltau_1_1DrawingWindow__inherit__graph.map  classeltau_1_1DrawingWindow__inherit__graph.md5  classeltau_1_1EagerTerminal-members.html  classeltau_1_1EagerTerminal.html  classeltau_1_1EagerTerminal.js  classeltau_1_1EagerTerminal__coll__graph.map  classeltau_1_1EagerTerminal__coll__graph.md5  classeltau_1_1Element-members.html  classeltau_1_1Element.html  classeltau_1_1Element.js  classeltau_1_1Element__coll__graph.map  classeltau_1_1Element__coll__graph.md5  classeltau_1_1Element__inherit__graph.map  classeltau_1_1Element__inherit__graph.md5  classeltau_1_1EltauException-members.html  classeltau_1_1EltauException.html  classeltau_1_1EltauException.js  classeltau_1_1EltauException__inherit__graph.map  classeltau_1_1EltauException__inherit__graph.md5  classeltau_1_1HContainer-members.html  classeltau_1_1HContainer.html  classeltau_1_1HContainer.js  classeltau_1_1HContainer__coll__graph.map  (+194 more)
.github/workflows/: build-sca.yml
cmake/: project_options.cmake
docs/: header.html
examples/: CMakeLists.txt  basic.cpp
include/eltau/: coords.hpp  element.hpp  exception.hpp  screen.hpp  shared_state.hpp  terminal.hpp  text.hpp
scripts/: filter_libs.sh  format_codebase.sh  gen_coverage.sh  run_clang_tidy.sh  run_tests.sh  run_unit.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  (+23 more)
src/: coords.cpp  element.cpp  exception.cpp  screen.cpp  terminal.cpp  text.cpp
test/: CMakeLists.txt  test_coords.cpp  test_element.cpp  test_exception.cpp  test_foo.cpp  test_screen.cpp  test_text.cpp
